# Clip-Search

./: .gitignore  Dockerfile.api  Dockerfile.streamlit  README.md  app.py  best.ckpt.dvc  data.dvc  docker-compose.yml  inference.py  paths.json.dvc  pyproject.toml  requirements-api.txt  train.py  ui.py  vector.index.dvc
.dvc/: config
.github/workflows/: main.yaml
config/: config.yaml
config/data/: ucf101.yaml
config/model/: clip_base.yaml
scripts/: app.py  inference.py  locustfile.py  train.py  ui.py
src/clip_search/: convert_avi_to_mp4.py  datamodule.py  dataset.py  indexer.py  model.py  module.py
