[project]
name = "clip-search"
version = "0.1.0"
description = "Clip video search"
readme = "README.md"
authors = [
    { name = "Dominik Galus", email = "dominikgalus9@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "av>=16.0.1",
    "matplotlib>=3.10.8",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "I", "B", "ANN"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
