[project]
name = "clip-search"
version = "0.1.0"
description = "Clip video search"
readme = "README.md"
authors = [
    { name = "Dominik Galus", email = "dominikgalus9@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "av>=16.0.1",
    "dvc>=3.64.2",
    "einops>=0.8.1",
    "faiss-cpu>=1.13.1",
    "fastapi>=0.124.4",
    "lightning>=2.6.0",
    "locust>=2.42.6",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "pyrefly>=0.45.2",
    "ruff>=0.14.9",
    "streamlit>=1.52.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "I", "B", "ANN"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
